# x-hub-system

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTERPRISE.md  ENTERPRISE_zh.md  FAMILY.md  FAMILY_en.md  GOVERNANCE.md  LICENSE  LICENSE_POLICY.md  NOTICE.md  README.md  README_zh.md  RELEASE.md  SECURITY.md  TRADEMARKS.md  X_MEMORY.md  check_hub_db.sh  check_hub_status.sh  check_report.sh  check_supervisor_incident_db.sh  generate_xt_script.sh  run_supervisor_incident_db_probe.sh  run_xt_ready_db_check.sh  xt_ready_require_real_run.sh
rust/xhubd/: .gitignore  AGENTS.md  Cargo.toml  README.md  memory_gateway_cutover_readiness.json  memory_gateway_shadow_compare_history.json  memory_gateway_shadow_compare_status.json
rust/xhubd/config/: daemon_profile.domain.example.json  daemon_profile.lan.example.json  daemon_profile.local.json  default.toml
rust/xhubd/docs/: IMPLEMENTATION_STATUS.md  MODEL_MANAGEMENT_EXECUTION_PLAN.md  NODE_HUB_SHADOW_COMPARE_INTEGRATION.md  PROVIDER_ROUTE_CLI.md  RHM_010_XT_MODEL_INVENTORY_FIELDS.md  RHM_011_XT_LIVE_MODEL_INVENTORY_BRIDGE.md  RHM_012_MODEL_INVENTORY_SHADOW_EVIDENCE.md  RHM_013_REAL_RUNTIME_MODEL_INVENTORY_EVIDENCE.md  RHM_014_MODEL_ROUTE_HTTP_PREP.md  RHM_015_UI_COMPATIBILITY_PRESERVATION.md  RHM_016_MODEL_ROUTE_AUTHORITY_PREP_BRIDGE.md  RHM_017_MODEL_ROUTE_CANDIDATE_EVIDENCE_RUNNER.md  RHM_018_LOCAL_MODEL_ROUTE_CANDIDATE_COVERAGE.md  RHM_019_SKILLS_CATALOG_POLICY_GATE.md  RHM_020_MODEL_ROUTE_COMBINED_CANDIDATE_EVIDENCE_REPORT.md  RHM_021_SKILLS_PREFLIGHT_GRANT_AUDIT.md  (+115 more)
specs/: README.md
(+3175 files in other folders)
