[package]
name = "xhubd"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
xhub-contract = { path = "../xhub-contract" }
xhub-core = { path = "../xhub-core" }
xhub-db = { path = "../xhub-db" }
xhub-memory = { path = "../xhub-memory" }
xhub-policy = { path = "../xhub-policy" }
xhub-scheduler = { path = "../xhub-scheduler" }
xhub-skills = { path = "../xhub-skills" }
xhub-provider = { path = "../xhub-provider" }
xhub-runtime = { path = "../xhub-runtime" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }

[[bin]]
name = "xhubd"
path = "src/main.rs"
